tests/NormalTests/paczka1/fuzzy1/85095932.err
Error in line 3: L0jsZe8V0u0 A382 91,86
Error in line 4: XFbOf6 A387 58,6
Error in line 20: XFbOf6 A387 162,73
Error in line 10: XFbOf6 A387 97,8
Error in line 30: XFbOf6 S37 479,0
Error in line 37: N1yrc A382 45,3
